--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 <div class="container">
     <div class="header">
         <h1>시노펙스,'힐넥서스'와 여행투석 플랫폼 사업제휴, 지분 60% 확보!</h1>
-        <p class="meta-info">시노펙스 ・ 2025. 6. 12. 10:33</p>
+        <p class="meta-info">시노펙스 ・ 2025. 6. 12.</p>
     </div>
 
     <div class="content">
